create group & show user info

--- a/views/pages/follow/follow.pug
+++ b/views/pages/follow/follow.pug
@@ -53,7 +53,7 @@ block bodyContent
                                 i.fas.fa-bell
                                 .notification_box
                             |Notification 
-                        a.nav_link(href="/message")
+                        a.nav_link(href="/messages")
                             span
                                 i.fas.fa-envelope
                                 .notification_box
