--- a/views/pages/home/home.pug
+++ b/views/pages/home/home.pug
@@ -55,12 +55,12 @@ block bodyContent
                                 i.fas.fa-bell
                                 .notification_box
                             |Notification 
-                        a.nav_link(href="/message")
+                        a.nav_link(href="/messages")
                             span
                                 i.fas.fa-envelope
                                 .notification_box
                             |Message 
-                        a.nav_link(href="/bookmarks")
+                        a.nav_link(href="/messages")
                             span 
                                 i.far.fa-bookmark
                                 .notification_box
