--- a/views/pages/search/search.pug
+++ b/views/pages/search/search.pug
@@ -81,7 +81,7 @@ block bodyContent
                                 i.fas.fa-bell
                                 .notification_box
                             |Notification 
-                        a.nav_link(href="/message")
+                        a.nav_link(href="/messages")
                             span
                                 i.fas.fa-envelope
                                 .notification_box
