--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -21,7 +21,7 @@ html(lang="en")
         script(src="//cdn.jsdelivr.net/npm/sweetalert2@11")
         //- JS Script
         <script type="text/javascript" src="/assets/js/moment.js" defer></script>
-        script(src="https://cdn.socket.io/4.5.4/socket.io.min.js") 
+        script(src="https://cdn.socket.io/4.5.4/socket.io.min.js" defer) 
         block jsScript
     body
         block bodyContent
