display group chat & private chat user info.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -126,3 +126,7 @@ a {
 .user_profile_info .img {
   position: relative;
 }
+
+.activeStatus.tweetActiveStatus.chatActiveStatus::after {
+  content: attr(data-active-status);
+}
