--- a/public/assets/css/messages.css
+++ b/public/assets/css/messages.css
@@ -262,6 +262,10 @@ h4.chat_error {
   margin-top: 20px;
 }
 
+.post_header {
+  border-bottom: 1px solid;
+}
+
 .post_header a {
   width: 40px;
   height: 40px;
@@ -283,4 +287,115 @@ h4.chat_error {
   background: rgba(51, 38, 153, 0.12549) !important;
   -webkit-box-shadow: 0 0.5rem 1rem #00000026 !important;
           box-shadow: 0 0.5rem 1rem #00000026 !important;
+}
+
+.messages_container .chatItem {
+  padding: 10px 20px;
+  background-color: #202327;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #504e4e;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.messages_container .chatItem:hover {
+  background: #16181c;
+}
+
+.messages_container .chatItem .chatImage {
+  position: relative;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 2;
+  margin-right: 10px;
+}
+
+.messages_container .chatItem .chatImage img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: block;
+}
+
+.messages_container .chatItem .chatImage img:nth-child(2) {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.messages_container .chatItem .chatDetails {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+}
+
+.messages_container .chatItem .chatDetails h4.chatTitle {
+  font-size: 16px;
+  color: #d8d8d8;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  height: 15px;
+}
+
+.messages_container .chatItem .chatDetails .sub-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+  overflow: hidden;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #9e9e9e;
+}
+
+.messages_container .chatItem .chatDetails .sub-text p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-bottom: 0px;
+}
+
+h4.nothingShow {
+  text-align: center;
+  height: 40vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: red;
+}
+
+.activeStatus.tweetActiveStatus.message {
+  position: absolute;
+  background: #5d5e60;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  bottom: -8px;
+  right: 7px;
+  border: 2px solid #000;
+  z-index: 1;
+}
+
+.activeStatus.tweetActiveStatus.message.active {
+  background: #31a24c !important;
 }
