--- a/public/scss/messages.scss
+++ b/public/scss/messages.scss
@@ -109,6 +109,7 @@
       align-items: center;
       margin-right: 10px;
       position: relative;
+
       img {
         display: block;
         width: 40px;
@@ -183,6 +184,7 @@ h4.chat_error {
   margin-top: 20px;
 }
 .post_header {
+  border-bottom: 1px solid;
   a {
     width: 40px;
     height: 40px;
@@ -196,4 +198,91 @@ h4.chat_error {
       box-shadow: 0 0.5rem 1rem #00000026 !important;
     }
   }
+}
+
+//
+.messages_container {
+  .chatItem {
+    padding: 10px 20px;
+    background-color: rgb(32, 35, 39);
+    display: flex;
+    border-bottom: 1px solid #504e4e;
+    transition: 0.3s;
+    &:hover {
+      background: rgb(22, 24, 28);
+    }
+    .chatImage {
+      position: relative;
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      z-index: 2;
+      margin-right: 10px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        display: block;
+        &:nth-child(2) {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+        }
+      }
+    }
+
+    .chatDetails {
+      flex: 1;
+      overflow: hidden;
+      h4.chatTitle {
+        font-size: 16px;
+        color: #d8d8d8;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        height: 15px;
+      }
+      .sub-text {
+        display: flex;
+        gap: 15px;
+        overflow: hidden;
+        justify-content: space-between;
+        color: #9e9e9e;
+        p {
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          flex: 1;
+          margin-bottom: 0px;
+        }
+      }
+    }
+  }
+}
+
+h4.nothingShow {
+  text-align: center;
+  height: 40vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: red;
+}
+
+//
+.activeStatus.tweetActiveStatus.message {
+  position: absolute;
+  background: #5d5e60;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  bottom: -8px;
+  right: 7px;
+  border: 2px solid #000;
+  z-index: 1;
+}
+
+.activeStatus.tweetActiveStatus.message.active {
+  background: #31a24c !important;
 }
