--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -321,7 +321,6 @@
             display: grid;
             grid-template-columns: auto auto;
             border-radius: 10px;
-            border: 1px solid #252424;
             overflow: hidden;
             .tweetImg {
               width: 100%;
@@ -331,6 +330,9 @@
               img {
                 width: 100%;
                 height: 100%;
+
+                border-radius: 10px;
+                border: 1px solid #252424;
               }
             }
           }
@@ -368,7 +370,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 10px;
+            padding: 10px 30px;
           }
 
           button {
@@ -469,13 +471,15 @@
         grid-template-columns: auto auto;
         border-radius: 10px;
         overflow: hidden;
-        border: 1px solid #252424;
+
         .tweetImg {
           width: 100%;
           height: 100%;
           overflow: hidden;
           margin: auto;
           img {
+            border-radius: 10px;
+            border: 1px solid #252424;
             width: 100%;
             height: 100%;
           }
@@ -516,7 +520,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 10px;
+        padding: 10px 30px;
       }
 
       button {
