--- a/views/pages/profile/profile.pug
+++ b/views/pages/profile/profile.pug
@@ -16,113 +16,11 @@ block bodyContent
     - avatarUrl = user.avatarProfile ? `/uploads/${user._id}/profile/${user.avatarProfile}` : `/uploads/profile/avatar.png`;
 
 
-    #replyModal.modal.fade(aria-hidden='true' aria-labelledby='commentModalTitle' tabindex='-1')
-        .modal-dialog.modal-dialog-centered
-            .modal-content.shadow-lg
-                .modal-header
-                    h2#commentModalTitle.modal-title.fs-5 Reply
-                    button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
-                .modal-body
-                .modal-footer
-                    .create_reply
-                        .user_avatar
-                            .activeStatus.tweetActiveStatus.active(data-activeStatus='active now')
-                            img(src=avatarUrl alt="Avatar")
-                        .reply_area
-                            textarea#replyTextAreaContent(placeholder="What's happening" spellcheck='false')
-                            .replyImageContainer
-                            .reply_actions.mt-3
-                                label(for='replyPostImage')
-                                    i.fas.fa-image(aria-hidden='true')
-                                    input#replyPostImage(type='file' multiple='' hidden='')
-                                button#replyBtn(disabled onclick="clearInputData()") Reply Tweet
+    include ./../../partials/replyModal.pug
+    include ./../../partials/profileAndCoverUpdate.pug
 
-    #avatarUpdateModal.modal.fade(aria-hidden='true' aria-labelledby='avatarModalTitle' tabindex='-1')
-        .modal-dialog.modal-dialog-centered
-            .modal-content.shadow-lg
-                .modal-header
-                    h2#avatarModalTitle.modal-title.fs-5 Update Profile Avatar
-                    button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
-                .modal-body
-                    input#updateAvatarInput(type='file')
-                    #avatarPreviewContainer
-                        img#avatarPreview
-                .modal-footer
-                    button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
-                    button#avatarUpdateBtn.btn.btn-primary(type='button') Save changes
-
-    #coverUpdateModal.modal.fade(aria-hidden='true' aria-labelledby='coverModalTitle' tabindex='-1')
-        .modal-dialog.modal-dialog-centered
-            .modal-content.shadow-lg
-                .modal-header
-                    h2#coverModalTitle.modal-title.fs-5 Update Cover Image
-                    button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
-                .modal-body
-                    input#coverUpdateInput(type='file')
-                    #coverPreviewContainer
-                        img#coverPreview
-                .modal-footer
-                    button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
-                    button#coverUpdateBtn.btn.btn-primary(type='button') Save changes
     main.main
-        .left_side_container
-            .left_top_area
-                .logo_area
-                    a(href="/" class="logoIcon")
-                        i.fab.fa-twitter
-                .menu_section.mt-2
-                    nav.nav
-                        a.nav_link(href="/")
-                            span
-                                i.fas.fa-home
-                                .notification_box 1
-                            |Home 
-                        a.nav_link(href="/search")
-                            span
-                                i.fas.fa-search
-                            |Search 
-                        a.nav_link(href="/notification")
-                            span
-                                i.fas.fa-bell
-                                .notification_box
-                            |Notification 
-                        a.nav_link(href="/messages")
-                            span
-                                i.fas.fa-envelope
-                                .notification_box
-                            |Message 
-                        a.nav_link(href="/bookmarks")
-                            span 
-                                i.far.fa-bookmark
-                                .notification_box
-                            | Bookmarks
-                        a.nav_link(href="/lists")
-                            span 
-                                i.fas.fa-list
-                                .notification_box
-                            | Lists
-                        a.nav_link(href=`/profile/${user.username}`)
-                            span
-                                i.fas.fa-user-circle
-                                .notification_box
-                            |Profile
-                        a.nav_link
-                            span
-                                i.fas.fa-ellipsis-h
-                            |More
-                    .tweet_btn.mt-3
-                        button Tweet
-            .left_bottom_area 
-                .user_profile_info
-                    .img
-                        .activeStatus.tweetActiveStatus.active(data-activeStatus='active now')
-                        img(src=avatarUrl alt="Avatar")
-                    .info
-                        h5 #{user.firstName + " " + user.lastName}
-                        span #{user.username}
-                    i.fas.fa-ellipsis-h
-                .menu.activeToggle.shadow
-                    a(href="/logout") Log out #{user.username}
+        include ./../../partials/left_side.pug
         .middle_side_container
             .post_header
                 h4
