--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -202,6 +202,7 @@
           height: 50px;
           border-radius: 50%;
           cursor: pointer;
+          border: 1px solid #4a4a4a;
         }
       }
       .post_area {
@@ -308,6 +309,7 @@
             height: 100%;
             border-radius: 50%;
             object-fit: cover;
+            border: 1px solid #4a4a4a;
           }
         }
         .tweet_body {
@@ -572,6 +574,7 @@
           height: 50px;
           border-radius: 50%;
           cursor: pointer;
+          border: 1px solid #4a4a4a;
         }
       }
       .reply_area {
