--- a/views/pages/messages/chat.pug
+++ b/views/pages/messages/chat.pug
@@ -8,8 +8,10 @@ block cssLink
 block jsScript
     script(src="/assets/js/app.js" defer)
     script(src="/assets/js/chat.js" defer)
+    script(src="/assets/js/chatting.js" defer)
 block bodyContent
     - avatarUrl = user.avatarProfile ? `/uploads/${user._id}/profile/${user.avatarProfile}` : `/uploads/profile/avatar.png`;
+    .overlay(hidden)
     main.main
         include ./../../partials/left_side.pug
         .middle_side_container
@@ -25,7 +27,29 @@ block bodyContent
                     ul
                         li Hello, How are you?
                 .chat_footer
-                    textarea#msgInput(placeholder='Type a message...' rows="1")
+                    .chat_attachments
+                        label(for="image" class="d-flex align-items-center")
+                            input#image(type="file" multiple hidden) 
+                            span.material-symbols-outlined
+                                | imagesmode
+                        button(style="margin: 0px 7px")#stickerHandler.d-flex.align-items-center
+                            .sticker_container(hidden)
+                                .searchArea
+                                    span.material-symbols-outlined
+                                        | search
+                                    input#stickerInput(type="text" placeholder='Search sticker')
+                                .stickers
+                            span.material-symbols-outlined
+                                | sentiment_satisfied
+                        button#gifHandler.d-flex.align-items-center
+                            .gif_container(hidden)
+                                .searchArea
+                                    i.fas.fa-search
+                                    input(type="text" placeholder='Search...')
+                                .GIfs
+                            span.material-symbols-outlined
+                                | gif_box
+                    textarea#msgInput(placeholder='Start a new message...' rows="1")
                     button 
                         i.fas.fa-paper-plane
         .right_side_container
