--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -7,6 +7,7 @@ html(lang="en")
         block title
         //- Css Link
         link(rel="stylesheet" href="/assets/css/style.css")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0")
         block cssLink
 
         //- Bootstrap CDN
