--- a/public/assets/css/messages.css
+++ b/public/assets/css/messages.css
@@ -699,3 +699,99 @@ h4.nothingShow {
   font-size: 15px;
   font-weight: 500;
 }
+
+.selectedImages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #202327;
+  color: white;
+  overflow: auto;
+  margin: 0px 20px;
+  padding: 10px 20px;
+  border-radius: 50px;
+  gap: 20px;
+}
+
+.selectedImages label {
+  background: #3e3b3b;
+  width: 60px;
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 10px;
+}
+
+.selectedImages label span {
+  font-size: 27px;
+  pointer-events: none;
+}
+
+.selectedImages .image-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 15px;
+}
+
+.selectedImages .image-container .img {
+  width: 60px;
+  height: 60px;
+  padding: 7px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #3e3b3b;
+  border-radius: 10px;
+}
+
+.selectedImages .image-container .img .crossBtn {
+  position: absolute;
+  top: -6px;
+  right: -7px;
+  border: none;
+  outline: none;
+  background: #676161;
+  width: 25px;
+  height: 25px;
+  border-radius: 30px;
+  font-size: 14px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.selectedImages .image-container .img .crossBtn:hover {
+  background: #898282;
+}
+
+.selectedImages .image-container .img .crossBtn i {
+  pointer-events: none;
+}
+
+.selectedImages .image-container .img img {
+  width: 100%;
+  height: 100%;
+}
