--- a/public/scss/messages.scss
+++ b/public/scss/messages.scss
@@ -498,3 +498,68 @@ h4.nothingShow {
   font-size: 15px;
   font-weight: 500;
 }
+
+.selectedImages {
+  display: flex;
+  align-items: center;
+  background: #202327;
+  color: white;
+  overflow: auto;
+  margin: 0px 20px;
+  padding: 10px 20px;
+  border-radius: 50px;
+  gap: 20px;
+  label {
+    background: #3e3b3b;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    span {
+      font-size: 27px;
+      pointer-events: none;
+    }
+  }
+  .image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    .img {
+      width: 60px;
+      height: 60px;
+      padding: 7px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #3e3b3b;
+      border-radius: 10px;
+      .crossBtn {
+        position: absolute;
+        top: -6px;
+        right: -7px;
+        border: none;
+        outline: none;
+        background: #676161;
+        width: 25px;
+        height: 25px;
+        border-radius: 30px;
+        font-size: 14px;
+        transition: 0.3s;
+        &:hover {
+          background: #898282;
+        }
+        i {
+          pointer-events: none;
+        }
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
